scripts/grafana-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`monitoring.upskillforge.com`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
